--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="./src/assets//images/Logo.svg" />
+  <link rel="icon" href="./src/assets/images//weightlifter.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Buzzi App" />
+  <meta name="description" content="Gym Buddy" />
   <link rel="apple-touch-icon" href="/logo192.png" />
-  <title>Buzzi App</title>
+  <title>Gym Buddy</title>
 
   <!-- this is to resolve issue in old safari browser in tablet -->
   <script src="https://cdn.jsdelivr.net/npm/resize-observer-polyfill@1.5.1/dist/ResizeObserver.min.js"></script>
